k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thinkback
  labels:
    app: thinkback
spec:
  type: ClusterIP
  selector:
    app: thinkback
    component: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
